hphp/hack/test/typecheck/sealed/method_class_03.php.exp
WARN: File "method_class_03.php", line 6, characters 14-21:
Class `D` in sealed allowlist for method `foo` in `C`, but does not override method `foo` (Warn[12041])
ERROR: File "method_class_03.php", line 17, characters 19-21:
The method `foo` is not compatible with the overridden method (Typing[4341])
  File "method_class_03.php", line 17, characters 19-21:
  You cannot override the method because it is sealed.
  File "method_class_03.php", line 7, characters 19-21:
  Declaration is here
